--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Adafruit-PlatformDetect==3.83.0
 Adafruit-PureIO==1.1.11
 binho-host-adapter==0.1.6
 pyftdi==0.57.1
+pynmea2==1.19.0
 pyserial==3.5
 pyusb==1.3.1
 RPi.GPIO==0.7.1
